# TetrisServer

./: .env  .gitignore  Cargo.toml  README.md
App/: .flutter-plugins  .flutter-plugins-dependencies  README.md  build.yaml  pubspec.yaml
App/assets/audio/: .gitkeep
App/assets/fonts/: .gitkeep
App/assets/images/: .gitkeep
App/assets/rive/: .gitkeep
App/lib/: main.dart
App/lib/app/: app.dart
App/lib/core/constants/: api_constants.dart  app_constants.dart  game_constants.dart  routes.dart
App/lib/core/extensions/: context_extensions.dart  list_extensions.dart  string_extensions.dart
App/lib/core/models/: game.dart  game_board.dart  game_board.freezed.dart  multiplayer.dart  tetromino.dart  tetromino.freezed.dart  user.dart  user.freezed.dart  user.g.dart
App/lib/core/services/: api_service.dart  audio_service.dart  auth_service.dart  game_service.dart  socket_service.dart  storage_service.dart
App/lib/core/theme/: app_theme.dart
App/lib/core/utils/: formatters.dart  helpers.dart  validators.dart
App/lib/features/auth/bloc/: auth_bloc.dart  auth_bloc.freezed.dart  auth_event.dart  auth_state.dart
App/lib/features/auth/screens/: login_screen.dart  register_screen.dart
App/lib/features/auth/widgets/: auth_background.dart  auth_form.dart
App/lib/features/splash/: splash_screen.dart
src/: main.rs
src/database/: mod.rs
src/handlers/: mod.rs
src/models/: game_board.rs  game_sessions.rs  mod.rs  room.rs  tetromino.rs  user.rs
src/services/: game_service.rs  mod.rs  room_service.rs  user_service.rs  websocket_service.rs
(+25 files in other folders)
