[package]
name = "tetris_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
jsonwebtoken = "9.1.0"
socketioxide = { version = "0.9.0", features = ["tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"
bcrypt = "0.15.0"
thiserror = "1.0.50"
rand = "0.8.5"
futures-util = "0.3.29"
tokio-stream = "0.1.14"
dashmap = "5.5.3"